--- a/index.html
+++ b/index.html
@@ -3,71 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Sharlist</title>
-        <!--<link rel="stylesheet" type="text/css" href="style.css">
-        <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/start.css">
+        <!--<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
         <script src="script.js"></script>  -->
     </head>
     <body>
+        <img src="icons/picture_start.jpg" class="picture_start">
         <div class="page">
-            <div class="logo">Логотипчик</div>
-            <div class="menu">
-                <ul>
-                    <li><button>Показать легенду</button></li>   <!-- обернуть в form -->
-                    <li><button>Выбрать цвет</button></li>
-                    <li>
-                        <input class="filter" type="radio">
-                        <span class="filter_text">Все</span>
-                        <input class="filter" type="radio">
-                        <span class="filter_text">Оставшиеся</span>
-                    </li>
-                </ul>
-            </div>
-            <div class="content">
-                <div>Cписок с именем:</div>
-                <input type="text" placeholder="наименование списка">
-                <button>ОK</button>
-                <h4 class="list_name">В путь:</h4>
-                <div class="list">
-                    <ol>
-                        <li class="list_elem">
-                            <span>&#9872;</span>
-                            <span>Палатка</span>
-                        </li>
-                        <li class="list_elem">
-                            <span>&#9872;</span>
-                            <span>Спальник</span>
-                        </li>
-                        <li class="list_elem">
-                            <span>&#9872;</span>
-                            <span>Котелок</span>
-                        </li>
-                        <li class="list_elem">
-                            <span>&#9872;</span>
-                            <span>Зарядки</span>
-                            <ul>
-                                <li>от телефона</li>
-                                <li>от фотика</li>
-                            </ul>
-                        </li>
-                    </ol>
-                    <input class="new_elem" type="text" placeholder="новый элемент">
-                </div>
-                <div class="legend">
-                    <h4>Легенда</h4>
-                    <ul class="colors">
-                        <li>
-                            <span>&#9711;</span>
-                            <input type="text" value="фио1">
-                        </li>
-                        <li>
-                            <span>&#9711;</span>
-                            <input type="text" value="фио2">
-                        </li>
-                    </ul>
-                </div>
-                <div>Cсылка для друзей:</div>
-                <input class="link" readonly="readonly" type="text" value="http:/...">
-            </div>
+            <form action="script.js">
+                <div class="explanation">Cписок с именем:</div>
+                <input type="text" placeholder="наименование списка" autofocus class="text">
+                <button class="ok">ОК</button>
+            </form>
         </div>
      </body>
 </html>
