--- a/list.html
+++ b/list.html
@@ -10,37 +10,38 @@
     </head>
     <body>
         <div class="page">
-            <div class="logo">Sharlist</div>
+            <h1 class="logo">Sharlist</h1>
             <div class="left_content">
-            <ul class="menu">
-                <li class="menu_elem"><button class="menu_button">Показать легенду</button></li>
-                <li class="menu_elem"><button class="menu_button">Выбрать цвет &#9656;</button></li>
-                <li class="menu_elem">
-                    <div class="tumbler">
-                        <label class="label"><input class="filter button_color_active" type="radio"><span class="filter_text">Все</span></label><label class="label"><input class="filter" type="radio"><span class="filter_text separator">Оставшиеся</span></label>
-                    </div>
-                </li>
-            </ul>
-            <div class="for_friends">
-                <h2 class="link_name">Cсылка для друзей:</h2>
-                <input class="link" readonly="readonly" type="text" value="http://sharlist.ru/uzupg6tw/">
-            </div>
-            <div class="add_color">
-                <div class="color">
-                    <span class="color_elem red"></span>
-                    <span class="color_elem orange"></span>
-                    <span class="color_elem yellow"></span>
-                    <span class="color_elem purple"></span>
-                    <span class="color_elem darkgreen"></span>
-                    <span class="color_elem green"></span>
-                    <span class="color_elem deepblue"></span>
-                    <span class="color_elem blue"></span>
+                <ul class="menu">
+                    <li class="menu_elem"><button class="menu_button">Показать легенду</button></li>
+                    <li class="menu_elem">
+                        <button class="menu_button">Выбрать цвет &#9656;</button>
+                        <div class="add_color">
+                        <div class="color">
+                            <span class="color_elem red"></span>
+                            <span class="color_elem orange"></span>
+                            <span class="color_elem yellow"></span>
+                            <span class="color_elem purple"></span>
+                            <span class="color_elem darkgreen"></span>
+                            <span class="color_elem green"></span>
+                            <span class="color_elem deepblue"></span>
+                            <span class="color_elem blue"></span>
+                        </div>
+                        <div class="wrap"><span class="arrow">&#9664;</span></div> 
+                        </div>
+                    </li>
+                    <li class="menu_elem">
+                        <div class="tumbler">
+                            <label class="label"><input class="filter button_color_active" type="radio"><span class="filter_text">Все</span></label><label class="label"><input class="filter" type="radio"><span class="filter_text separator">Оставшиеся</span></label>
+                        </div>
+                    </li>
+                </ul>
+                <div class="for_friends">
+                    <h2 class="link_name">Cсылка для друзей:</h2>
+                    <input class="link" readonly="readonly" type="text" value="http://sharlist.ru/uzupg6tw/">
                 </div>
-                <div class="wrap"><span class="arrow">&#9664;</span></div> 
-            </div>
             </div>
             <div class="content">
-                <img src="icons/pin_Red.png" class="list_name_pin">
                 <h2 class="list_name">В путь:</h2>
                 <div class="list">
                     <ol>
