--- a/list.html
+++ b/list.html
@@ -13,26 +13,26 @@
             <h1 class="logo">Sharlist</h1>
             <div class="left_content">
                 <ul class="menu">
-                    <li class="menu_elem"><button class="menu_button">Показать легенду</button></li>
+                    <li class="menu_elem"><button class="menu_button button_legend">Показать легенду</button></li>
                     <li class="menu_elem">
-                        <button class="menu_button">Выбрать цвет &#9656;</button>
+                        <button class="menu_button button_color_active">Выбрать цвет &#9656;</button>
                         <div class="add_color">
-                        <div class="color">
-                            <span class="color_elem red"></span>
-                            <span class="color_elem orange"></span>
-                            <span class="color_elem yellow"></span>
-                            <span class="color_elem purple"></span>
-                            <span class="color_elem darkgreen"></span>
-                            <span class="color_elem green"></span>
-                            <span class="color_elem deepblue"></span>
-                            <span class="color_elem blue"></span>
-                        </div>
-                        <div class="wrap"><span class="arrow">&#9664;</span></div> 
+                            <div class="color">
+                                <span class="color_elem red"></span>
+                                <span class="color_elem orange"></span>
+                                <span class="color_elem yellow"></span>
+                                <span class="color_elem purple"></span>
+                                <span class="color_elem darkgreen"></span>
+                                <span class="color_elem green"></span>
+                                <span class="color_elem deepblue"></span>
+                                <span class="color_elem blue"></span>
+                            </div>
+                            <span class="arrow">&#9664;</span>
                         </div>
                     </li>
                     <li class="menu_elem">
                         <div class="tumbler">
-                            <label class="label"><input class="filter button_color_active" type="radio"><span class="filter_text">Все</span></label><label class="label"><input class="filter" type="radio"><span class="filter_text separator">Оставшиеся</span></label>
+                            <label class="label"><input class="filter" type="radio" name="tumbler" value="all"><span class="filter_text">Все</span></label><label class="label"><input class="filter" type="radio" name="tumbler" value="remaining"><span class="filter_text separator">Оставшиеся</span></label>
                         </div>
                     </li>
                 </ul>
