--- a/list.html
+++ b/list.html
@@ -32,7 +32,7 @@
                     </li>
                     <li class="menu_elem">
                         <div class="tumbler">
-                            <label class="label"><input class="filter" type="radio" name="tumbler" value="all"><span class="filter_text">Все</span></label><label class="label"><input class="filter" type="radio" name="tumbler" value="remaining"><span class="filter_text separator">Оставшиеся</span></label>
+                            <label class="label"><input class="filter" type="radio" name="tumbler" value="all"><span class="filter_text left">Все</span></label><label class="label"><input class="filter" type="radio" name="tumbler" value="remaining"><span class="filter_text separator right">Оставшиеся</span></label>
                         </div>
                     </li>
                 </ul>
