--- a/list.html
+++ b/list.html
@@ -49,7 +49,7 @@
                             <span>Палатка</span>
                         </li>
                         <li class="list_elem"><div class="choice green"> </div>
-                            <span>Спальник</span>
+                            <span>Спальник в чехле на синтепоне с простроченной молнией сбоку, размер S температурой 10</span>
                         </li>
                         <li class="list_elem"><div class="choice green"> </div>
                             <span>Котелок</span>
@@ -62,28 +62,7 @@
                             </ul>
                         </li>
                         <li class="list_elem"><div class="choice red"> </div>
-                            <span>Пенка</span>
-                        </li>
-                        <li class="list_elem"><div class="choice red"> </div>
-                            <span>Рюкзак</span>
-                        </li>
-                        <li class="list_elem"><div class="choice blue"> </div>
-                            <span>Рулька печеная</span>
-                        </li>
-                        <li class="list_elem"><div class="choice orange"></div>
-                            <span>Палка-копалка</span>
-                        </li>
-                        <li class="list_elem"><div class="choice orange"></div>
-                            <span>Сапоги кирзовые с комфортом</span>
-                        </li>
-                        <li class="list_elem"><div class="choice deepblue"></div>
-                            <span>Дождевичок с подвохом</span>
-                        </li>
-                        <li class="list_elem"><div class="choice deepblue"></div>
-                            <span>Палка-копалка</span>
-                        </li>
-                        <li class="list_elem"><div class="choice deepblue"></div>
-                            <span>Сапоги кирзовые с комфортом</span>
+                            <span class="removed">Пенка</span>
                         </li>
                     </ol>
                     <input class="new_elem" type="text" placeholder="новый элемент">
