Реализована работа кнопки "Выбрать цвет"

--- a/list.html
+++ b/list.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/content.css">
         <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
         <script src="js/list.js"></script>
+        <script src="js/pallet.js"></script>
         <script src="js/index.js"></script>
     </head>
     <body>
@@ -16,7 +17,8 @@
                 <ul class="menu">
                     <li class="menu_elem"><button class="menu_button button_legend">Показать легенду</button></li>
                     <li class="menu_elem">
-                        <button class="menu_button button_color_active">Выбрать цвет &#9656;</button>
+                        <button class="menu_button button_color">Выбрать цвет &#9656;</button>
+                        <span class="choosed_color"></span>
                         <div class="add_color" hidden="true">
                             <div class="color">
                                 <span class="color_elem red"></span>
@@ -51,20 +53,7 @@
                         </li>
                         <li class="list_elem"><div class="choice green"> </div>
                             <span>Спальник в чехле на синтепоне с простроченной молнией сбоку, размер S температурой 10</span>
-                        </li><!--
-                        <li class="list_elem"><div class="choice green"> </div>
-                            <span>Котелок</span>
                         </li>
-                        <li class="list_elem"><div class="choice darkgreen"> </div>
-                            <span>Зарядки</span>
-                            <ul class="sublist">
-                                <li class="list_elem">от телефона</li>
-                                <li class="list_elem">от фотика</li>
-                            </ul>
-                        </li>
-                        <li class="list_elem"><div class="choice red"> </div>
-                            <span class="removed">Пенка</span>
-                        </li> -->
                     </ol>
                     <form><input class="new_elem" type="text" name="new_elem" placeholder="новый элемент"></form>
                 </div>
