Исправлен механизм работы кнопки "Выбрать цвет"

--- a/list.html
+++ b/list.html
@@ -18,7 +18,7 @@
                     <li class="menu_elem"><button class="menu_button button_legend">Показать легенду</button></li>
                     <li class="menu_elem">
                         <button class="menu_button button_color">Выбрать цвет &#9656;</button>
-                        <span class="choosed_color"></span>
+                        <div class="choosed_color"></div>
                         <div class="add_color" hidden="true">
                             <div class="color">
                                 <span class="color_elem red"></span>
