--- a/list.html
+++ b/list.html
@@ -6,8 +6,9 @@
         <link rel="stylesheet" type="text/css" href="css/leftPart.css">
         <link rel="stylesheet" type="text/css" href="css/content.css">
         <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-        <script src="js/list.js"></script>
         <script src="js/pallet.js"></script>
+        <script src="js/legend.js"></script>
+        <script src="js/list.js"></script>
         <script src="js/index.js"></script>
     </head>
     <body>
@@ -67,26 +68,6 @@
                         <li class="legend_colors_elem">
                             <span class="legend_choice orange"></span>
                             <input class="legend_fio" type="text" placeholder="фио2">
-                        </li>
-                        <li class="legend_colors_elem">
-                            <span class="legend_choice deepblue"></span>
-                            <input class="legend_fio" type="text" placeholder="фио3">
-                        </li>
-                        <li class="legend_colors_elem">
-                            <span class="legend_choice orange"></span>
-                            <input class="legend_fio" type="text" placeholder="фио2">
-                        </li>
-                        <li class="legend_colors_elem">
-                            <span class="legend_choice deepblue"></span>
-                            <input class="legend_fio" type="text" placeholder="фио3">
-                        </li>
-                        <li class="legend_colors_elem">
-                            <span class="legend_choice orange"></span>
-                            <input class="legend_fio" type="text" placeholder="фио2">
-                        </li>
-                        <li class="legend_colors_elem">
-                            <span class="legend_choice deepblue"></span>
-                            <input class="legend_fio" type="text" placeholder="фио3">
                         </li>
                         <li class="legend_colors_elem">
                             <span class="legend_choice deepblue"></span>
