Реализовано добавление цвета в легенду

--- a/list.html
+++ b/list.html
@@ -62,16 +62,7 @@
                     <h3 class="legend_name">Легенда</h3>
                     <ul class="legend_colors">
                         <li class="legend_colors_elem">
-                            <span class="legend_choice darkgreen"></span>
-                            <input class="legend_fio" type="text" placeholder="фио1">
-                        </li>
-                        <li class="legend_colors_elem">
-                            <span class="legend_choice orange"></span>
-                            <input class="legend_fio" type="text" placeholder="фио2">
-                        </li>
-                        <li class="legend_colors_elem">
-                            <span class="legend_choice deepblue"></span>
-                            <input class="legend_fio" type="text" placeholder="фио3">
+                            <span class="legend_choice darkgreen"></span><input class="legend_fio" type="text" placeholder="фио1">
                         </li>
                     </ul>
                 </div>
