Реализовано удаление цвета из легенды, подредактированы стили палитры, начало работы с указанием фио в легенде

--- a/list.html
+++ b/list.html
@@ -62,7 +62,7 @@
                     <h3 class="legend_name">Легенда</h3>
                     <ul class="legend_colors">
                         <li class="legend_colors_elem">
-                            <span class="legend_choice darkgreen"></span><input class="legend_fio" type="text" placeholder="фио1">
+                            <span class="legend_choice darkgreen"></span><form><input class="legend_fio" type="text" name="new_fio" placeholder="фио1"></form>
                         </li>
                     </ul>
                 </div>
