--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <title>Sharlist</title>
         <link rel="stylesheet" type="text/css" href="css/start.css">
-        <!--<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-        <script src="script.js"></script>  -->
+        <script src="../jquery.js"></script>
     </head>
     <body>
         <div class="page">
