--- a/list.html
+++ b/list.html
@@ -5,7 +5,7 @@
         <title>Sharlist</title>
         <link rel="stylesheet" type="text/css" href="css/leftPart.css">
         <link rel="stylesheet" type="text/css" href="css/content.css">
-        <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+        <script src="../jquery.js"></script>
         <script src="js/pallet.js"></script>
         <script src="js/legend.js"></script>
         <script src="js/list.js"></script>
