--- a/list.html
+++ b/list.html
@@ -5,7 +5,7 @@
         <title>Sharlist</title>
         <link rel="stylesheet" type="text/css" href="css/leftPart.css">
         <link rel="stylesheet" type="text/css" href="css/content.css">
-        <script src="../jquery.js"></script>
+        <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="data.js"></script>
         <script src="templates.js"></script>
         <script src="mustache.min.js"></script>
